# scale-benchmarks

./: .gitignore  README.md  compile.go  go.mod  go.sum  main_test.go  rust.go
http/: main.go
http/compile/: compile.go
pkg/extism/rust/: Cargo.toml
pkg/extism/rust/src/: lib.rs
pkg/go/modules/bad-signature/: bad-signature.go
pkg/go/modules/text-signature/: text-signature.go
pkg/go/signature/bad-signature/: bad.signature.go  guest.go  runtime.go
pkg/go/signature/text-signature/: runtime.go  text.signature.go
pkg/native/go/: regex.go
pkg/rust/modules/bad_signature/: bad_signature.rs
pkg/rust/modules/text_signature/: text_signature.rs
pkg/rust/signature/text-signature/: context.rs  text_signature.rs
pkg/scale/go/modules/text-signature/: text-signature.go
pkg/scale/go/signature/text-signature/: guest.go  runtime.go  text.signature.go
pkg/scale/rust/modules/text_signature/: text_signature.rs
pkg/scale/rust/signature/text-signature/: Cargo.toml  context.rs  guest.rs  lib.rs  text_signature.rs
regex/: main_test.go
regex/compile/: compile.go
