[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "0.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }
regex = "1.7.1"

[lib]
crate_type = ["cdylib"]
