[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extism-pdk = "0.2.0"
regex = "1.7.1"
lazy_static = "1.4.0"
polyglot_rs = "0.6.0"
wee_alloc = "0.4.5"

[dependencies.text_signature]
path = "../../scale/rust/signature/text-signature"

[lib]
crate_type = ["cdylib"]
